--- a/public/old/index.html
+++ b/public/old/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="cn"><head><meta charset="UTF-8">
-    <meta name="yandex-verification" content="adc7f9f4b945368e" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5">
+<html lang="cn">
+<head>
+    <meta charset="UTF-8">
+    <script type="text/javascript">
+        if (window.location.href === 'https://pegas.is/old') {
+            window.location.replace('https://pegas.is/old/')
+        }
+    </script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5">
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -15,52 +21,58 @@
     <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
 
     <link rel="shortcut icon" href="images/favicon.png">
-	<title>Welcome - Pegasis's Site</title>
-	<link rel="stylesheet" href="css/style.css">
-	</head><body><div class="wrap css3" id="wrap">
-		<div class="wrapper">
-			<div class="page_wp" id="page_wp">
-				<div class="page page_1"><span class="page_bg scale_box"></span>
-					<div class="img_box"><img src="" alt=""></div>
-					<div class="txt_box scale_box">
-						<h2>UNDER THE GALAXY, WE EXPLORED SIDE BY SIDE<br>繁星之下，我们并肩前行</h2>
-					</div>
-				</div>
-				<div class="page page_2"><span class="page_bg scale_box"></span>
-					<div class="img_box"><img src="" alt=""></div>
-					<div class="txt_box scale_box">
-						<h2>LET THE BRILLIANCE OF RATIONALITY SHINE THROUGH THE AETHER<br>任凭理性的光辉，闪彻时空</h2>
-						</div>
-				</div>
-				<div class="page page_3"><span class="page_bg scale_box"></span>
-					<div class="img_box"><img src="" alt=""></div>
-					<div class="txt_box scale_box">
-						<h2>LEAVING IMMORTAL FAME<br>留下不朽的名声</h2>
-						</div>
-				</div>
-				<div class="page page_4 show"><span class="page_bg scale_box"></span>
-					<div class="img_box"><img src="" alt=""></div>
-					<div class="light_wp scale_box"><span class="light_box"><i class="light_1"></i> <i class="light_2"></i> <i class="light_3"></i> <i class="light_4"></i> <i class="light_5"></i></span></div><span class="meteor_box scale_box"></span>
-					<div class="txt_box scale_box">
-						<h2>SWEAR BY THE STARS, NEVER SETTLE<br>以星辰为义，永寻征途</h2>
-						</div>
-				</div>
-			</div>
-			<div class="star_wp scale_box show" id="star_wp"><span class="star_bg"></span> <span class="star_box"></span></div><canvas id="canvas" width="1408" height="701"></canvas>
-			<div class="btns_wp scale_box">
-				<a class="btn_download JS-btn-download" href="index2.html">Enter Pegasis's Site</a>
-			</div>
-		</div>
-	</div>
-	<script src="./js/vendors.js"></script>
-	<script src="./js/index.js"></script>
-	<!--[if IE 6]>
+    <title>Welcome - Pegasis's Site</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<div class="wrap css3" id="wrap">
+    <div class="wrapper">
+        <div class="page_wp" id="page_wp">
+            <div class="page page_1"><span class="page_bg scale_box"></span>
+                <div class="img_box"><img src="" alt=""></div>
+                <div class="txt_box scale_box">
+                    <h2>UNDER THE GALAXY, WE EXPLORED SIDE BY SIDE<br>繁星之下，我们并肩前行</h2>
+                </div>
+            </div>
+            <div class="page page_2"><span class="page_bg scale_box"></span>
+                <div class="img_box"><img src="" alt=""></div>
+                <div class="txt_box scale_box">
+                    <h2>LET THE BRILLIANCE OF RATIONALITY SHINE THROUGH THE AETHER<br>任凭理性的光辉，闪彻时空</h2>
+                </div>
+            </div>
+            <div class="page page_3"><span class="page_bg scale_box"></span>
+                <div class="img_box"><img src="" alt=""></div>
+                <div class="txt_box scale_box">
+                    <h2>LEAVING IMMORTAL FAME<br>留下不朽的名声</h2>
+                </div>
+            </div>
+            <div class="page page_4 show"><span class="page_bg scale_box"></span>
+                <div class="img_box"><img src="" alt=""></div>
+                <div class="light_wp scale_box"><span class="light_box"><i class="light_1"></i> <i class="light_2"></i> <i
+                        class="light_3"></i> <i class="light_4"></i> <i class="light_5"></i></span></div>
+                <span class="meteor_box scale_box"></span>
+                <div class="txt_box scale_box">
+                    <h2>SWEAR BY THE STARS, NEVER SETTLE<br>以星辰为义，永寻征途</h2>
+                </div>
+            </div>
+        </div>
+        <div class="star_wp scale_box show" id="star_wp"><span class="star_bg"></span> <span class="star_box"></span>
+        </div>
+        <canvas id="canvas" width="1408" height="701"></canvas>
+        <div class="btns_wp scale_box">
+            <a class="btn_download JS-btn-download" href="index2.html">Enter Pegasis's Site</a>
+        </div>
+    </div>
+</div>
+<script src="./js/vendors.js"></script>
+<script src="./js/index.js"></script>
+<!--[if IE 6]>
 <script type="text/javascript" src="http://static.webgame.kanimg.com/com/DD_PNG_min.js"></script>
 <script type="text/javascript">
-	var links=document.getElementsByTagName("a");
-	for(var i=0,l=links.length;i<l;i++){
-		links[i].setAttribute("hideFocus",true);
-	}
+var links=document.getElementsByTagName("a");
+for(var i=0,l=links.length;i<l;i++){
+    links[i].setAttribute("hideFocus",true);
+}
 </script>
 <![endif]--></body>
 </html>
